# ODBC_Wrapper

./: .gitignore  CMakeLists.txt  README.md  automated-tests.sh
doc/: .README
lib/: .README
src/: ABS_SQL_Database.h  CMakeLists.txt  main.cpp
src/libODBC_Wrapper/: CMakeLists.txt  Config.hpp  IDatabasePrinter.h  IDatabasePrinter.hpp  IPrintableDatabase.h  IPrintableDatabase.hpp  ISQLDatabase.h  ISQLDatabase.hpp  ODBC_CSV_Printer.cpp  ODBC_CSV_Printer.h  ODBC_CSV_Printer.hpp  ODBC_Database.cpp  ODBC_Database.h  ODBC_Database.hpp  ODBC_Database_Wrapper.cpp  ODBC_Database_Wrapper.h  ODBC_Database_Wrapper_Printer.cpp  ODBC_Database_Wrapper_Printer.h  ODBC_NORMAL_Printer.cpp  ODBC_NORMAL_Printer.h  ODBC_NORMAL_Printer.hpp  README.md
src/libmymath/: CMakeLists.txt  mymath.cpp  mymath.h
tests/: CMakeLists.txt  test_hello.cpp
